--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body{
     margin: 0;
     padding: 0;
     font-family: sans-serif;
-    background: url(tech.jpeg) no-repeat center center fixed;
+    background: black;
     background-size: cover
 }
 .box{
